--- a/project/yazhou-h5/src/css/bet/bet_mix_box.scss
+++ b/project/yazhou-h5/src/css/bet/bet_mix_box.scss
@@ -14,7 +14,7 @@
       color:var(--q-color-fs-color-6);
     }
     .content-box {
-      background:var(--q-color-page-bg-color-114);
+      background:var(--q-gb-bd-c-15);
     }
     .bet-add {
       background-image: var(--q-color-img-bg-59);
@@ -67,7 +67,7 @@
       opacity: 0.5;
     }
     .set-opacity {
-      background: var(--q-color-page-bg-color-49);
+      background: var(--q-gb-bd-c-9);
 
     }
     .bet-box {
