--- a/project/yazhou-h5/src/css/pages/main-layout.scss
+++ b/project/yazhou-h5/src/css/pages/main-layout.scss
@@ -31,7 +31,7 @@
     }
     /* **********注单记录********************* *-E*/
     .maintenance-tips{
-      background:var(--q-color-page-bg-color-50);
+      background:var(--q-gb-bd-c-13);
     }
   }
 
