--- a/project/yazhou-h5/src/css/pages/match-container-champion.scss
+++ b/project/yazhou-h5/src/css/pages/match-container-champion.scss
@@ -21,7 +21,7 @@
       background:var(--q-color-page-bg-color-95);
       .match-title {
         &:before {
-          background:var(--q-color-page-bg-color-50);
+          background:var(--q-gb-bd-c-13);
         }
         &.is-favorite {
           &:before {
