--- a/project/yazhou-h5/src/pages/details/analysis-matches/styles/highlights.scss
+++ b/project/yazhou-h5/src/pages/details/analysis-matches/styles/highlights.scss
@@ -137,7 +137,7 @@
         transition: height .3s ease-in-out;
         &.expand {
           height: 1.85rem;
-          border-left: 1px solid var(--q-color-page-bg-color-50);
+          border-left: 1px solid var(--q-gb-bd-c-13);
   
           .video-wrapper {
             width: 100%;
