--- a/project/yazhou-h5/src/pages/details/styles/details-theme/result_details_tab.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details-theme/result_details_tab.scss
@@ -22,7 +22,7 @@
     .t_color {
       color:var(--q-color-fs-color-37) !important;
       &:after {
-        background: var(--q-color-page-bg-color-50);
+        background: var(--q-gb-bd-c-13);
       }
     }
   }
