--- a/project/yazhou-h5/src/pages/details/styles/details.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details.scss
@@ -22,7 +22,7 @@
   }
 
   ::v-deep .q-tab__indicator {
-    color: var(--q-color-page-bg-color-50);
+    color: var(--q-gb-bd-c-13);
     border-radius: 1.5px;
     z-index: 1;
   }
