--- a/project/yazhou-h5/src/css/bet/bet_mix_single_detail.scss
+++ b/project/yazhou-h5/src/css/bet/bet_mix_single_detail.scss
@@ -27,13 +27,13 @@
     }
     .content-b{
       border: 1px solid var(--q-color-border-color-3);
-      background:var(--q-color-page-bg-color-114);
+      background:var(--q-gb-bd-c-15);
     }
     .set-opacity{
       opacity: 0.2;
     }
     .money-span{
-      background: var(--q-color-page-bg-color-50);
+      background: var(--q-gb-bd-c-13);
     }
     .money-span2{
       background: transparent !important;
@@ -47,7 +47,7 @@
           color:  var(--q-color-fs-color-18);
         }
         &::after{
-          background-color: var(--q-color-page-bg-color-50);
+          background-color: var(--q-gb-bd-c-13);
         }
       }
       p:nth-child(2){
