--- a/project/yazhou-h5/src/css/bet/bet_single_detail.scss
+++ b/project/yazhou-h5/src/css/bet/bet_single_detail.scss
@@ -16,7 +16,7 @@
     .content-b {
       border: 1px solid var(--q-color-border-color-3);
       color: var(--q-color-fs-color-3);
-      background:var(--q-color-page-bg-color-114);
+      background:var(--q-gb-bd-c-15);
     }
     .content-b2 {
       border: 1px solid  var(--q-color-border-color-13);
@@ -25,7 +25,7 @@
       opacity: 0.2;
     }
     .money-span {
-      background:var(--q-color-page-bg-color-50);
+      background:var(--q-gb-bd-c-13);
     }
     .money-span3 {
       background: transparent;
@@ -33,7 +33,7 @@
     .content-t {
       p:nth-child(1) {
         &::after {
-          background:var(--q-color-page-bg-color-50);
+          background:var(--q-gb-bd-c-13);
         }
       }
 
