--- a/project/yazhou-h5/src/pages/details/styles/details-theme/result_page.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details-theme/result_page.scss
@@ -25,7 +25,7 @@
 
   /*************** 排名结束 *************** -E*/
   .fat-vir-result {
-    background:var(--q-color-page-bg-color-114);
+    background:var(--q-gb-bd-c-15);
   }
   .bor-btm {
     height: 0.88rem;
