--- a/project/yazhou-h5/src/css/bet/bet_mix_box.scss
+++ b/project/yazhou-h5/src/css/bet/bet_mix_box.scss
@@ -6,12 +6,12 @@
   .bet-mix-box {
     max-width:3.78rem;
     .dele-wrap {
-      background-color:  var(--q-color-page-bg-color-70);
+      background-color:  var(--q-gb-bd-c-6);
       color: var(--q-color-fs-color-13);
     }
     .err-msg3 {
       background-color: var(--q-color-page-bg-color-75);
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
     .content-box {
       background:var(--q-gb-bd-c-15);
@@ -23,7 +23,7 @@
       background: var(--q-color-com-bg-color-20);
     }
     .order-ok {
-      color: var(--q-color-fs-color-3);
+      color: var(--q-gb-t-c-4);
       border-top: 1px solid  var(--q-color-border-color-14);
 
       .moey-p {
@@ -39,7 +39,7 @@
       box-shadow: var(--q-color-box-shadow-color-11);
     }
     .err-msg2 {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
       box-shadow: var(--q-color-box-shadow-color-11);
 
       .opacity-m {
@@ -59,7 +59,7 @@
       border-color: var(--q-color-border-color-48);
     }
     .add-box2 {
-      color: var(--q-color-fs-color-7);
+      color: var(--q-gb-t-c-3);
       border-color:  var(--q-color-border-color-6);
       background-color: transparent;
     }
@@ -81,7 +81,7 @@
       color: var(--q-color-fs-color-13);
     }
     .bottom-bar {
-      color: var(--q-color-fs-color-7);
+      color: var(--q-gb-t-c-3);
       .bottom-bar-sp {
         color: var(--q-color-fs-color-108);
       }
