--- a/project/yazhou-h5/src/pages/details/styles/details-theme/details.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details-theme/details.scss
@@ -82,7 +82,7 @@
 
   .activeText,
   .active-text {
-    color: var(--q-color-fs-color-6) !important;
+    color: var(--q-gb-t-c-13) !important;
   }
 
   // .rules-wet {
