--- a/project/yazhou-h5/src/pages/details/styles/details-theme/odds_new.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details-theme/odds_new.scss
@@ -3,7 +3,7 @@
  */
 [class*=theme0] {
   .odds_new {
-    color: var(--q-color-fs-color-3);
+    color: var(--q-gb-t-c-4);
   }
   .red_text {
     color:var(--q-color-com-fs-color-9) !important;
@@ -15,6 +15,6 @@
     color:var(--q-color-com-fs-color-8) !important;
   }
   .odds-new2 {
-    color: var(--q-color-fs-color-7);
+    color: var(--q-gb-t-c-3);
   }
 }
