--- a/project/yazhou-h5/src/pages/details/styles/details-theme/result_details_tab.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details-theme/result_details_tab.scss
@@ -17,7 +17,7 @@
       }
     }
     .common-style {
-      color: var(--q-color-fs-color-7);
+      color: var(--q-gb-t-c-3);
     }
     .t_color {
       color:var(--q-color-fs-color-37) !important;
