--- a/project/yazhou-h5/src/pages/details/styles/details-theme/temp.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details-theme/temp.scss
@@ -81,7 +81,7 @@
       color:  var(--q-color-fs-color-25);
     }
     .gray {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
     .white_text {
       color:var(--q-color-com-fs-color-8);
@@ -93,10 +93,10 @@
       color: var(--q-color-com-fs-color-44) !important;
     }
     .size-color-imp {
-      color:var(--q-color-fs-color-6) !important;
+      color:var(--q-gb-t-c-13) !important;
     }
     .odds-on {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
   }
   .tournament-play-outer {
@@ -145,7 +145,7 @@
     }
     .warp {
       &:after {
-        background:  var(--q-color-page-bg-color-25);
+        background:  var(--q-gb-bd-c-8);
       }
     }
     .first-rad {
@@ -228,11 +228,11 @@
     //   background:var(--q-color-page-bg-color-2);
     // }
     .details_t_color6 {
-      color: var(--q-color-fs-color-6);
+      color: var(--q-gb-t-c-13);
     }
     .warp {
       &:after {
-        background:  var(--q-color-page-bg-color-25);
+        background:  var(--q-gb-bd-c-8);
       }
     }
     .first-rad {
@@ -241,7 +241,7 @@
       }
     }
     .fam {
-      color: var(--q-color-fs-color-7);
+      color: var(--q-gb-t-c-3);
     }
     .win .odds-new2 {
       color: var(--q-color-com-fs-color-44) !important;
@@ -275,7 +275,7 @@
     }
     .margin-other {
       .details_t_color6 {
-        color:  var(--q-color-fs-color-6) !important;
+        color:  var(--q-gb-t-c-13) !important;
       }
     }
     .bor-style {
@@ -295,7 +295,7 @@
     }
     .warp {
       &:after {
-        background:  var(--q-color-page-bg-color-25);
+        background:  var(--q-gb-bd-c-8);
       }
     }
     .first-rad {
@@ -310,10 +310,10 @@
       color: var(--q-color-com-fs-color-44) !important;
     }
     .size-color {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
     .size-color-imp {
-      color:var(--q-color-fs-color-6) !important;
+      color:var(--q-gb-t-c-13) !important;
     }
   }
 
@@ -328,7 +328,7 @@
       background: var(--q-color-page-bg-color-8);
     }
     .font_color {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
     .remark {
       color: var(--q-color-com-fs-color-11);
@@ -350,7 +350,7 @@
         }
         .play-box-style {
            background-color:var(--q-color-page-bg-color-104);
-           color: var(--q-color-fs-color-6);
+           color: var(--q-gb-t-c-13);
         }
       }
     }
@@ -385,7 +385,7 @@
     }
     .warp {
       &:after {
-        background:  var(--q-color-page-bg-color-25);
+        background:  var(--q-gb-bd-c-8);
       }
     }
     .first-rad {
@@ -400,7 +400,7 @@
       color: var(--q-color-com-fs-color-11);
     }
     .is-score {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
     .item-col:first-child {
       border-right: 1px solid var(--q-color-border-color-56);
@@ -454,7 +454,7 @@
     }
     .warp {
       &:after {
-        background:  var(--q-color-page-bg-color-25);
+        background:  var(--q-gb-bd-c-8);
       }
     }
     .first-rad {
@@ -469,10 +469,10 @@
       color: var(--q-color-com-fs-color-44) !important;
     }
     .size-color {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
     .size-color-imp {
-      color:var(--q-color-fs-color-6) !important;
+      color:var(--q-gb-t-c-13) !important;
     }
   }
 
@@ -492,13 +492,13 @@
     /*************** 每项热门结束 *************** -E*/
     /*************** 每项team开始 *************** -S*/
     .team-name {
-      color: var(--q-color-fs-color-3);
+      color: var(--q-gb-t-c-4);
     }
 
     /*************** 每项team结束 *************** -E*/
     /*************** 每项odds开始 *************** -S*/
     .team-odds {
-      color: var(--q-color-fs-color-3);
+      color: var(--q-gb-t-c-4);
     }
 
     /*************** 每项odds结束 *************** -E*/
@@ -520,10 +520,10 @@
         border-right: 0px solid  var(--q-color-border-color-38);
       }
       .temp9-name {
-        color: var(--q-color-fs-color-3);
+        color: var(--q-gb-t-c-4);
       }
       .temp9-ov {
-        color: var(--q-color-fs-color-3);
+        color: var(--q-gb-t-c-4);
       }
     }
     .champion-item2 {
@@ -559,7 +559,7 @@
     /*************** 白色下分割线结束 *************** -E*/
     /*************** 赔率开始 *************** -S*/
     .odds-style {
-      color: var(--q-color-fs-color-3);
+      color: var(--q-gb-t-c-4);
     }
     /*************** 赔率结束 *************** -E*/
     .item-height {
@@ -599,7 +599,7 @@
     /*************** 白色下分割线结束 *************** -E*/
     /*************** 赔率开始 *************** -S*/
     .odds-style {
-      color: var(--q-color-fs-color-3);
+      color: var(--q-gb-t-c-4);
     }
 
     /*************** 赔率结束 *************** -E*/
@@ -625,7 +625,7 @@
       background:var(--q-color-page-bg-color-2);
     }
     .troop-name {
-      color: var(--q-color-fs-color-7);
+      color: var(--q-gb-t-c-3);
     }
     .player-name {
       color: var(--q-color-com-fs-color-11);
@@ -634,7 +634,7 @@
       color: var(--q-color-com-fs-color-11);
     }
     .on-color {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
     .bet-click {
       background-color: var(--q-gb-bd-c-9) !important;
@@ -653,7 +653,7 @@
       background:var(--q-color-page-bg-color-2);
     }
     .title-style {
-      color: var(--q-color-fs-color-7);
+      color: var(--q-gb-t-c-3);
     }
     .play-box-style {
       background:var(--q-color-page-bg-color-2);
@@ -663,11 +663,11 @@
     }
     .warp {
       &:after {
-        background:  var(--q-color-page-bg-color-25);
+        background:  var(--q-gb-bd-c-8);
       }
     }
     .remark {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
     .remark-line1 {
       color: var(--q-color-com-fs-color-11);
@@ -675,7 +675,7 @@
     .odds-wrap {
       background:var(--q-color-page-bg-color-2);
       &:after {
-        background:  var(--q-color-page-bg-color-25);
+        background:  var(--q-gb-bd-c-8);
       }
     }
     .first-rad {
@@ -712,16 +712,16 @@
       border-bottom: 1px solid red;
     }
     .odd-color {
-      color:var(--q-color-fs-color-6) !important;
+      color:var(--q-gb-t-c-13) !important;
     }
     .size-color {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
     .size-color-wit {
       color:var(--q-color-com-fs-color-8);
     }
     .size-color-imp {
-      color:var(--q-color-fs-color-6) !important;
+      color:var(--q-gb-t-c-13) !important;
     }
     [class*="slide_icon_"] {
       background: var(--q-color-img-bg-36) no-repeat  center / cover;
