--- a/project/yazhou-h5/src/pages/match-list/styles/match-list.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-list.scss
@@ -127,7 +127,7 @@
       }
       .item-icon {
         border-radius: 50%;
-        background-color: var(--q-color-fs-color-6);
+        background-color: var(--q-gb-t-c-13);
         margin:0 .03rem;
         &.item-icon-1 {
           width: .04rem;
