--- a/project/yazhou-h5/src/css/bet/bet_mix_detail.scss
+++ b/project/yazhou-h5/src/css/bet/bet_mix_detail.scss
@@ -4,14 +4,14 @@
  */
 [class*=theme0] {
   .bet-mix-detail {
-    color: var(--q-color-fs-color-7);
+    color: var(--q-gb-t-c-3);
     &.bet-mix-detail2 {
       &::after {
         display: none;
       }
     }
     .content-box2 {
-      background-color: var(--q-color-page-bg-color-70) !important;
+      background-color: var(--q-gb-bd-c-6) !important;
     }
     .content-b2 {
       border: 1px solid  var(--q-color-border-color-13) !important;
@@ -44,7 +44,7 @@
       }
 
       p:nth-child(2) {
-        color: var(--q-color-fs-color-8);
+        color: var(--q-gb-t-c-6);
       }
     }
     .limit-txt {
