--- a/project/yazhou-h5/src/css/bet/bet_mix_show2.scss
+++ b/project/yazhou-h5/src/css/bet/bet_mix_show2.scss
@@ -4,16 +4,16 @@
  */
 [class*=theme0] {
   .bet-mix-show2 {
-    color: var(--q-color-fs-color-3);
+    color: var(--q-gb-t-c-4);
     &.bet-mix-show3 {
       background-color:  var(--q-color-page-bg-color-22);
     }
     .timer-down {
       color:var(--q-color-com-fs-color-8);
-      background: var(--q-color-page-bg-color-19);
+      background: var(--q-gb-bd-c-13);
     }
     .locked-shadow {
-      background:  var(--q-color-page-bg-color-23);
+      background:  var(--q-gb-bd-c-2);
     }
     .content-t {
       line-height: 0.2rem;
@@ -24,23 +24,23 @@
     .invalid-span,
     .invalid-span2 {
       color:var(--q-color-com-fs-color-8);
-      background: var(--q-color-page-bg-color-24);
+      background: var(--q-gb-bd-c-8);
     }
     .line {
-      background-color:  var(--q-color-page-bg-color-25);
+      background-color:  var(--q-gb-bd-c-8);
     }
     .team-info {
-      color: var(--q-color-fs-color-7);
+      color: var(--q-gb-t-c-3);
     }
     .team-info2 {
-      color: var(--q-color-fs-color-8);
+      color: var(--q-gb-t-c-6);
     }
     /* ************** 投注完成后的颜色展示 ************** -S */
     .color1 {
       color:  var(--q-color-com-fs-color-20);
     }
     .color2 {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
     .color3 {
       color:var(--q-color-com-fs-color-9);
