--- a/project/yazhou-h5/src/css/bet/bet_success_bar.scss
+++ b/project/yazhou-h5/src/css/bet/bet_success_bar.scss
@@ -7,16 +7,16 @@
     background:  var(--q-color-page-bg-color-71);
     border-top: 1px solid  var(--q-color-border-color-15);
     .p-left {
-      color: var(--q-color-fs-color-3);
+      color: var(--q-gb-t-c-4);
     }
     .money-d {
-      color: var(--q-color-fs-color-7);
+      color: var(--q-gb-t-c-3);
     }
     .color1 {
       color:  var(--q-color-com-fs-color-20);
     }
     .color2 {
-      color:var(--q-color-fs-color-6);
+      color:var(--q-gb-t-c-13);
     }
     .color3 {
       color:var(--q-color-com-fs-color-9);
@@ -25,7 +25,7 @@
       color:var(--q-color-com-fs-color-9);
     }
     .color5 {
-      color: var(--q-color-fs-color-3);
+      color: var(--q-gb-t-c-4);
     }
   }
 }
