--- a/project/yazhou-h5/src/css/pages/match-container-champion.scss
+++ b/project/yazhou-h5/src/css/pages/match-container-champion.scss
@@ -12,7 +12,7 @@
       }
     }
     .limit-time {
-      color: var(--q-color-fs-color-7);
+      color: var(--q-gb-t-c-3);
       .limit-t-i {
         background-color: var(--q-color-page-bg-color-9);
       }
@@ -25,11 +25,11 @@
         }
         &.is-favorite {
           &:before {
-            background-color: var(--q-color-page-bg-color-19)
+            background-color: var(--q-gb-bd-c-13)
           }
         }
         .hpn-wrap {
-          color: var(--q-color-fs-color-7);
+          color: var(--q-gb-t-c-3);
         }
       }
       .ol-list-wrap {
@@ -40,7 +40,7 @@
 
           }
           .odds {
-            color: var(--q-color-fs-color-7);
+            color: var(--q-gb-t-c-3);
           }
         }
       }
