--- a/project/yazhou-h5/src/pages/details/styles/details-theme/result_page.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details-theme/result_page.scss
@@ -13,13 +13,13 @@
   /*************** 编号结束 *************** -E*/
   /*************** 名开始 *************** -S*/
   .virtual-name {
-    color: var(--q-color-fs-color-3);
+    color: var(--q-gb-t-c-4);
   }
 
   /*************** 名结束 *************** -E*/
   /*************** 排名开始 *************** -S*/
   .count-style {
-    color: var(--q-color-fs-color-3);
+    color: var(--q-gb-t-c-4);
     background: var(--q-color-page-bg-color-34);
   }
 
@@ -34,7 +34,7 @@
 
   /*************** 赛果名称开始 *************** -S*/
   .play-name {
-    color: var(--q-color-fs-color-7);
+    color: var(--q-gb-t-c-3);
   }
 
   /*************** 赛果名称结束 *************** -E*/
@@ -49,15 +49,15 @@
     border-right: 1px solid  var(--q-color-border-color-34);
   }
   .result-sty {
-    color: var(--q-color-fs-color-7);
+    color: var(--q-gb-t-c-3);
   }
   .item-ov {
-    color: var(--q-color-fs-color-3);
+    color: var(--q-gb-t-c-4);
   }
   .borrig {
     border-right: 1px solid  var(--q-color-border-color-34);
   }
   .ov-style {
-    color: var(--q-color-fs-color-3);
+    color: var(--q-gb-t-c-4);
   }
 }
