--- a/project/yazhou-h5/src/pages/details/styles/details-theme/virtual_sports_tab.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details-theme/virtual_sports_tab.scss
@@ -30,7 +30,7 @@
     }
   }
   .historical-record {
-    color: var(--q-color-fs-color-3);
+    color: var(--q-gb-t-c-4);
     border-bottom: 1px solid  var(--q-color-border-color-27);
     &:after {
       background:var(--q-gb-bd-c-13);
@@ -38,7 +38,7 @@
   }
   .c-match-startistic {
      background-color:var(--q-color-page-bg-color-2);
-    color: var(--q-color-fs-color-7);
+    color: var(--q-gb-t-c-3);
     &::after {
       border-color: var(--q-color-border-color-5) !important;
     }
@@ -46,7 +46,7 @@
       .score-item {
         .info {
           .score {
-            color: var(--q-color-fs-color-7);
+            color: var(--q-gb-t-c-3);
           }
           .line {
             background:var(--q-gb-bd-c-13);
@@ -67,7 +67,7 @@
       .item {
         .result-list {
           .result-item {
-            background: var(--q-color-fs-color-8);
+            background: var(--q-gb-t-c-6);
             color:var(--q-color-com-fs-color-8);
             &.item-W {
               background: var(--q-color-com-bg-color-13);
@@ -106,13 +106,13 @@
   /*************** 马类编号结束 *************** -E*/
   /*************** 马名开始 *************** -S*/
   .virtual-name {
-    color: var(--q-color-fs-color-1);
+    color: var(--q-gb-t-c-3);
   }
 
   /*************** 马名结束 *************** -E*/
   /*************** 排名开始 *************** -S*/
   .count-style {
-    color: var(--q-color-fs-color-1);
+    color: var(--q-gb-t-c-3);
     background:  var(--q-color-page-bg-color-88);
     &::after {
       border-color: var(--q-color-border-color-5) !important;
