--- a/project/yazhou-h5/src/pages/match-list/styles/odd-list-wrap.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/odd-list-wrap.scss
@@ -13,7 +13,7 @@
       >span{
         flex: 1;
         font-size: 10px;
-        color: var(--q-color-fs-color-3);
+        color: var(--q-gb-t-c-4);
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -89,10 +89,10 @@
             .odd-title{
               font-size: .1rem;
               margin-bottom: unset;
-              color:var(--q-color-fs-color-6);
+              color:var(--q-gb-t-c-13);
             }
             .odd-value{
-              color: var(--q-color-fs-color-3);
+              color: var(--q-gb-t-c-4);
               &.red{
                 color: var(--q-color-com-fs-color-17) !important;
               }
@@ -119,7 +119,7 @@
     align-items: center;
     position: absolute;
     bottom: 0;
-    color: var(--q-color-fs-color-6)!important;
+    color: var(--q-gb-t-c-13)!important;
     img {
       display: block;
       margin-bottom: 0.02rem;
@@ -190,10 +190,10 @@
         .odd-title{
           font-size: .1rem;
           margin-bottom: unset;
-          color:var(--q-color-fs-color-6);
+          color:var(--q-gb-t-c-13);
         }
         .odd-value{
-          color: var(--q-color-fs-color-3);
+          color: var(--q-gb-t-c-4);
           &.red{
             color: var(--q-color-com-fs-color-17) !important;
           }
