--- a/project/yazhou-h5/src/pages/home/first-page/index.scss
+++ b/project/yazhou-h5/src/pages/home/first-page/index.scss
@@ -474,7 +474,7 @@
     animation-fill-mode: both;
   }
 
-  @include keyframes(fadeInUp) {
+  @keyframes fadeInUp  {
     0% {
       -webkit-transform: translate3d(0, 5%, 0);
       transform: translate3d(0, 5%, 0);
